syntax = "proto3";

package cyclonedx_ui.sbom.v1;

option go_package = "github.com/Qvineox/cyclonedx-ui/gen/go/api/proto/sbom/v1;sbom_v1";

import "google/api/annotations.proto";

import "api/proto/sbom/v1/vulnerability.proto";
import "api/proto/sbom/v1/component.proto";
import "api/proto/sbom/v1/sbom.proto";

service SbomService {
  rpc Decompose(DecomposeOptions) returns (SBOMDecomposition) {
    option (google.api.http) = {
      post: "/api/v1/sbom/decompose"
      body: "*"
    };
  };
}

message DecomposeOptions {
  repeated SBOMFile files = 1;

  uint64 max_depth = 2;
  bool only_vulnerable = 3;
}

message SBOMDecomposition {
  Component graph = 1;

  repeated Component components = 2;
  repeated Vulnerability vulnerabilities = 3;

  uint64 total_nodes = 4;
  repeated DependencyCycle dependency_cycles = 5;
}


